[package]
name = "ablive-scheduler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "2.6", features = []}
futures = "0.3"
tokio = "1"
serde = "1"
bson = {version = "2", features = ["chrono-0_4"]}
config = "0.13"
chrono = "0.4"
log = "0.4"
